@@ -1,3 +1,7 @@
+2000-09-17  Clint Adams  <schizo@debian.org>
+
+	* 12821: Src/builtin.c: bin_dot is now independent of PATH_MAX.
+
 2000-09-16  Bart Schaefer  <schaefer@zsh.org>
 
 	* 12817: Doc/Zsh/builtins.yo, Src/builtin.c: Give meaning to
